Add comprehensive CLAUDE.md documentation with recent improvements
- Add detailed authentication diagnostics and best practices
- Document comprehensive health check system and monitoring
- Include testing strategies with dynamic data and error handling
- Add production deployment guidelines and security considerations
- Document error handling, recovery mechanisms, and troubleshooting
- Update .gitignore to allow CLAUDE.md as project documentation
- Provide insights from recent authentication and testing work

--- a/.gitignore
+++ b/.gitignore
@@ -133,8 +133,7 @@ temp/
 mcp-server.log
 wordpress-debug.log
 
-# AI Assistant files
-CLAUDE.md
+# AI Assistant files (excluding CLAUDE.md which contains project documentation)
 .claude/
 .cursor/
 .cursorrules
