feat: Technical debt resolution v1.1.3
- Fix: Resolved all 105+ ESLint violations with proper quotes and trailing commas
- Fix: Removed unused variables and imports across 11+ files
- Fix: Eliminated conditional expect violations in Jest tests
- Fix: Suppressed debug/info logging during test runs for cleaner output
- Fix: Fixed unused variable warnings in shell scripts
- Improve: Professional test execution without console noise
- Improve: Code maintainability with standardized style
- Update: Version bumped to 1.1.3
- Update: CHANGELOG.md with comprehensive technical debt resolution
- Update: TODO.md to reflect completed items

Technical Debt Addressed:
✅ Zero ESLint errors (was 105+ errors)
✅ Zero unused variables (cleaned 11+ files)
✅ Clean test output (no debug noise)
✅ Proper Jest assertions (no conditional expects)
✅ Shell script quality (shellcheck warnings fixed)

All tests passing: 41/41 ✅
Build status: Clean ✅
Linting status: Pass ✅

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ jspm_packages/
 # Optional npm cache directory
 .npm
 
+# NPM authentication file (contains tokens)
+.npmrc
+!.npmrc.example
+
 # Optional eslint cache
 .eslintcache
 
