--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@aiondadotcom/mcp-wordpress",
-  "version": "1.1.2",
+  "name": "mcp-wordpress",
+  "version": "1.1.3",
   "description": "Comprehensive Model Context Protocol server for WordPress management with 54 tools, TypeScript support, and production-ready authentication",
   "main": "dist/index.js",
   "type": "module",
@@ -28,9 +28,14 @@
     "test:auth": "node scripts/test-auth.js",
     "health": "node scripts/health-check.js",
     "verify-claude": "node scripts/verify-claude-integration.js",
-    "lint": "eslint src/ tests/ bin/ scripts/",
-    "lint:fix": "eslint src/ tests/ bin/ scripts/ --fix",
-    "typecheck": "tsc --noEmit"
+    "lint": "eslint src/ tests/",
+    "lint:fix": "eslint src/ tests/ --fix",
+    "typecheck": "tsc --noEmit",
+    "check:ignore": "node scripts/sync-ignore-files.js",
+    "check:npm": "node scripts/test-npm-config.js",
+    "prepare": "husky",
+    "pre-commit": "lint-staged",
+    "prepublishOnly": "npm run build && npm run check:ignore"
   },
   "keywords": [
     "mcp",
@@ -57,11 +62,17 @@
     "@types/jest": "^30.0.0",
     "@types/nock": "^10.0.3",
     "@types/node": "^20.19.1",
+    "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.29.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-node": "^11.1.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.0",
+    "lint-staged": "^16.1.2",
+    "markdownlint-cli": "^0.45.0",
     "nock": "^14.0.5",
+    "prettier": "^3.6.2",
+    "sort-package-json": "^3.3.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -89,5 +100,17 @@
   "homepage": "https://github.com/AiondaDotCom/mcp-wordpress#readme",
   "publishConfig": {
     "access": "public"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.md": [
+      "markdownlint --fix"
+    ],
+    "package.json": [
+      "sort-package-json"
+    ]
   }
 }
