fix: resolve WordPress uploads directory permission error
- Add proper file permissions setup in wp-setup.sh
- Configure wp-cli container to run as root for permission management
- Ensure WordPress uploads directory has correct ownership (www-data:www-data)
- Add proper chmod 755 permissions for uploads directory

Resolves mkdir permission denied error when creating wp-content/uploads/

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -52,6 +52,7 @@ services:
     image: wordpress:cli
     container_name: wordpress-test-cli
     restart: "no"
+    user: root
     depends_on:
       wordpress-test:
         condition: service_healthy
