feat: Enhanced VS Code Jest testing configuration
- Add jest.vscode.config.json with ES module support
- Create test-vscode.sh script for proper NODE_OPTIONS handling
- Simplify .vscode/settings.json for better Jest extension compatibility
- Update jest.config.cjs with VS Code-friendly configuration
- Support multiple Jest extensions (orta.vscode-jest, firsttris.vscode-jest-runner)
- Maintain full compatibility with npm test scripts

Tests verified working via command line with new configurations
Should resolve VS Code Testing panel discovery issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,10 @@
 {
-  "jest.jestCommandLine": "npm run test:typescript",
-  "jest.rootPath": "./",
-  "jest.configPath": "jest.config.cjs",
-  "jest.nodeEnv": {
-    "NODE_OPTIONS": "--experimental-vm-modules"
-  },
+  "jest.disabledWorkspaceFolders": [],
   "jest.runMode": "on-demand",
-  "typescript.preferences.includePackageJsonAutoImports": "auto",
-  "testing.automaticallyOpenPeekView": "never",
-  "testing.defaultGutterClickAction": "run",
-  "testing.gutterEnabled": true,
-  "testing.openTesting": "neverOpen"
+  "jest.jestCommandLine": "./test-vscode.sh",
+  "jest.rootPath": "./",
+  "jest.configPath": "jest.vscode.config.json",
+  "jest.debugMode": false,
+  "testExplorer.useNativeTesting": true,
+  "typescript.preferences.includePackageJsonAutoImports": "auto"
 }
