--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "jest.disabledWorkspaceFolders": [],
-  "jest.runMode": "on-demand",
-  "jest.jestCommandLine": "NODE_OPTIONS='--experimental-vm-modules' npx jest",
+  "jest.runMode": "on-demand", 
+  "jest.jestCommandLine": "NODE_OPTIONS='--experimental-vm-modules' npx jest --config=jest.config.cjs",
   "jest.rootPath": "./",
   "jest.configPath": "jest.config.cjs",
   "jest.debugMode": false,
+  "jest.clearCache": true,
   "testExplorer.useNativeTesting": true,
   "typescript.preferences.includePackageJsonAutoImports": "auto"
 }
