refactor: improve CI/CD workflows
- Standardize Node.js version to 20 across all workflows
- Simplify test matrix execution in ci.yml
- Remove commented-out code in Claude-related workflows for clarity
- Ensure all workflows use consistent and up-to-date actions
- Streamline Docker build processes for modern features and fallbacks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,12 +42,7 @@ jobs:
         run: npm run build
 
       - name: 🧪 Run ${{ matrix.test-suite }} Tests
-        run: |
-          case "${{ matrix.test-suite }}" in
-            "typescript") npm run test:ci ;;
-            "security") npm run test:security ;;
-            "config") npm run test:config ;;
-          esac
+        run: npm run test:${{ matrix.test-suite }}
         env:
           # Mock credentials for testing
           WORDPRESS_SITE_URL: https://example.com
