--- a/.github/workflows/performance-gates.yml
+++ b/.github/workflows/performance-gates.yml
@@ -51,7 +51,7 @@ jobs:
     
     - name: Run performance regression tests
       run: npm run test:performance
-      continue-on-error: true  # Don't fail the workflow on performance issues
+      continue-on-error: ${{ github.actor == 'dependabot[bot]' || github.actor == 'github-actions[bot]' }}  # Only ignore failures for automated PRs
       env:
         NODE_ENV: test
         PERFORMANCE_TEST: true
@@ -63,7 +63,16 @@ jobs:
         name: performance-results
         path: |
           tests/results/performance-results.json
-          tests/baseline/performance-baseline.json
+          coverage/lcov-report/
+        retention-days: 30
+
+    - name: Upload performance regression report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: performance-regression-report
+        path: tests/baseline/
+        retention-days: 30
     
     - name: Performance gate check
       run: |
