--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -3,7 +3,7 @@ name: 🔍 Dependency Review
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-    branches: [main, develop]
+    branches: [main]
     # Skip dependency review for automated dependency updates
     paths-ignore:
       - 'package-lock.json'
@@ -40,24 +40,14 @@ jobs:
       - name: 🔍 Dependency Review
         uses: actions/dependency-review-action@v4
         with:
-          # Make less strict for dependency updates
-          fail-on-severity: high  # Changed from 'moderate' to 'high'
-          # Fail if vulnerabilities are found in runtime dependencies
+          fail-on-severity: high
           fail-on-scopes: runtime
-          # License check (allow common open source licenses)
-          allow-licenses: MIT, Apache-2.0, BSD-2-Clause, BSD-3-Clause, ISC, CC0-1.0, Unlicense, LGPL-2.1, LGPL-3.0
-          # Deny specific licenses
-          deny-licenses: AGPL-1.0, AGPL-3.0, GPL-2.0, LGPL-2.0
-          # Security advisories configuration
-          allow-ghsas: false
-          # Comment on PR with results (only on failure for dependency PRs)
-          comment-summary-in-pr: on-failure  # Changed from 'always'
-          # Vulnerability severity threshold
+          allow-licenses: MIT, Apache-2.0, BSD-2-Clause, BSD-3-Clause, ISC, CC0-1.0, Unlicense
+          deny-licenses: AGPL-1.0, AGPL-3.0, GPL-2.0, GPL-3.0
+          comment-summary-in-pr: on-failure
           vulnerability-check: true
-          # License compliance check (relaxed for dependency updates)
-          license-check: true  # Keep enabled but make non-blocking
-          # Show OpenSSF Scorecard information
-          show-openssf-scorecard: true  # Keep enabled for supply chain visibility
+          license-check: true
+          show-openssf-scorecard: true
 
   security-audit:
     name: 🔒 Security Audit
@@ -82,25 +72,24 @@ jobs:
           echo "## 🔍 NPM Security Audit Results" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          # Run audit and capture results
-          if npm audit --audit-level=moderate --json > audit-results.json 2>/dev/null; then
-            echo "✅ **No moderate or higher vulnerabilities found**" >> $GITHUB_STEP_SUMMARY
+          if npm audit --audit-level=high --json > audit-results.json 2>/dev/null; then
+            echo "✅ **No high or critical vulnerabilities found**" >> $GITHUB_STEP_SUMMARY
           else
             echo "⚠️ **Vulnerabilities detected**" >> $GITHUB_STEP_SUMMARY
             
-            # Parse and display results
             if [ -f audit-results.json ]; then
-              CRITICAL=$(cat audit-results.json | jq -r '.metadata.vulnerabilities.critical // 0')
-              HIGH=$(cat audit-results.json | jq -r '.metadata.vulnerabilities.high // 0')
-              MODERATE=$(cat audit-results.json | jq -r '.metadata.vulnerabilities.moderate // 0')
-              LOW=$(cat audit-results.json | jq -r '.metadata.vulnerabilities.low // 0')
+              CRITICAL=$(jq -r '.metadata.vulnerabilities.critical // 0' audit-results.json)
+              HIGH=$(jq -r '.metadata.vulnerabilities.high // 0' audit-results.json)
+              MODERATE=$(jq -r '.metadata.vulnerabilities.moderate // 0' audit-results.json)
               
               echo "- 🔴 Critical: $CRITICAL" >> $GITHUB_STEP_SUMMARY
               echo "- 🟠 High: $HIGH" >> $GITHUB_STEP_SUMMARY
               echo "- 🟡 Moderate: $MODERATE" >> $GITHUB_STEP_SUMMARY
-              echo "- 🟢 Low: $LOW" >> $GITHUB_STEP_SUMMARY
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "**Action Required:** Please run \`npm audit fix\` to address vulnerabilities." >> $GITHUB_STEP_SUMMARY
+              
+              if [ "$CRITICAL" -gt 0 ] || [ "$HIGH" -gt 0 ]; then
+                echo "**Action Required:** Run \`npm audit fix\` to address vulnerabilities." >> $GITHUB_STEP_SUMMARY
+                exit 1
+              fi
             fi
           fi
 
@@ -132,17 +121,14 @@ jobs:
 
       - name: 📜 License Checker
         run: |
-          # Install license checker
           npm install -g license-checker
           
           echo "## 📜 License Compliance Report" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          # Generate license report
           license-checker --json > licenses.json
           
-          # Check for problematic licenses
-          PROBLEMATIC_LICENSES="GPL-2.0,AGPL-1.0,AGPL-3.0,LGPL-2.0"
+          PROBLEMATIC_LICENSES="GPL-2.0,GPL-3.0,AGPL-1.0,AGPL-3.0"
           
           if license-checker --excludePackages 'dev-dependencies' --restrictLicenses "$PROBLEMATIC_LICENSES" --summary; then
             echo "✅ **No problematic licenses found**" >> $GITHUB_STEP_SUMMARY
@@ -151,9 +137,7 @@ jobs:
             echo "Please review the licenses and ensure compliance." >> $GITHUB_STEP_SUMMARY
           fi
           
-          # Count license types
-          TOTAL_LICENSES=$(cat licenses.json | jq 'keys | length')
-          echo "" >> $GITHUB_STEP_SUMMARY
+          TOTAL_LICENSES=$(jq 'keys | length' licenses.json)
           echo "**Total packages analyzed:** $TOTAL_LICENSES" >> $GITHUB_STEP_SUMMARY
 
       - name: 📊 Upload License Report
@@ -164,43 +148,10 @@ jobs:
           path: licenses.json
           retention-days: 30
 
-  supply-chain-security:
-    name: 🔗 Supply Chain Security
-    runs-on: ubuntu-latest
-    steps:
-      - name: 📥 Checkout Code
-        uses: actions/checkout@v4
-
-      - name: 🔍 Package Lock Analysis
-        run: |
-          echo "## 🔗 Supply Chain Security Analysis" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          # Check for package-lock.json integrity
-          if [ -f package-lock.json ]; then
-            echo "✅ **package-lock.json found**" >> $GITHUB_STEP_SUMMARY
-            
-            # Check lockfile version
-            LOCKFILE_VERSION=$(cat package-lock.json | jq -r '.lockfileVersion')
-            echo "- Lockfile version: $LOCKFILE_VERSION" >> $GITHUB_STEP_SUMMARY
-            
-            # Count dependencies
-            DEPS_COUNT=$(cat package-lock.json | jq '.dependencies | length // 0')
-            echo "- Total dependencies: $DEPS_COUNT" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "⚠️ **package-lock.json missing**" >> $GITHUB_STEP_SUMMARY
-            echo "Consider using npm ci for reproducible builds." >> $GITHUB_STEP_SUMMARY
-          fi
-          
-          # Check for .npmrc security settings
-          if [ -f .npmrc ]; then
-            echo "📄 **.npmrc configuration found**" >> $GITHUB_STEP_SUMMARY
-          fi
-
   dependency-summary:
     name: 📊 Dependency Review Summary
     runs-on: ubuntu-latest
-    needs: [dependency-review, security-audit, license-compliance, supply-chain-security]
+    needs: [dependency-review, security-audit, license-compliance]
     if: always()
     steps:
       - name: 📊 Generate Summary Report
@@ -211,13 +162,12 @@ jobs:
           echo "- **Dependency Review:** ${{ needs.dependency-review.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Security Audit:** ${{ needs.security-audit.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **License Compliance:** ${{ needs.license-compliance.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Supply Chain Security:** ${{ needs.supply-chain-security.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📋 Configuration Summary" >> $GITHUB_STEP_SUMMARY
-          echo "- **Fail on severity:** high and above (relaxed for dependency updates)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Fail on scopes:** runtime dependencies" >> $GITHUB_STEP_SUMMARY
-          echo "- **Allowed licenses:** MIT, Apache-2.0, BSD, ISC, CC0, Unlicense, LGPL" >> $GITHUB_STEP_SUMMARY
-          echo "- **OpenSSF Scorecard:** Enabled for supply chain visibility" >> $GITHUB_STEP_SUMMARY
+          echo "### 📋 Configuration" >> $GITHUB_STEP_SUMMARY
+          echo "- **Severity threshold:** High and Critical only" >> $GITHUB_STEP_SUMMARY
+          echo "- **Scope:** Runtime dependencies" >> $GITHUB_STEP_SUMMARY
+          echo "- **Allowed licenses:** MIT, Apache-2.0, BSD variants, ISC, CC0, Unlicense" >> $GITHUB_STEP_SUMMARY
+          echo "- **Blocked licenses:** GPL, AGPL variants" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📝 Recommendations" >> $GITHUB_STEP_SUMMARY
           echo "1. **Address any security vulnerabilities** found in the audit" >> $GITHUB_STEP_SUMMARY
