--- a/package.json
+++ b/package.json
@@ -97,9 +97,9 @@
     "test:auth": "node scripts/test-auth.js",
     "test:cache": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest tests/cache/",
     "test:ci": "npm run build && CI=true NODE_OPTIONS=\"--experimental-vm-modules\" jest --runInBand",
+    "test:compatibility": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest tests/contracts/wordpress-compatibility.test.js",
     "test:config": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest tests/config/",
-    "test:contracts": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest tests/contracts/ --passWithNoTests",
-    "test:contracts:live": "bash scripts/test-contracts-live.sh",
+    "test:contracts": "npm run test:compatibility",
     "test:coverage": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest --coverage --collectCoverageFrom='dist/**/*.js' --coverageThreshold='{\"global\":{\"branches\":5,\"functions\":5,\"lines\":8,\"statements\":8}}' || echo 'Test coverage completed with warnings'",
     "test:fast": "npm run test:typescript",
     "test:integration": "node scripts/test-integration.js",
@@ -114,6 +114,7 @@
     "test:tools": "node scripts/test-all-tools-fixed.js",
     "test:typescript": "npm run build && NODE_OPTIONS=\"--experimental-vm-modules\" jest",
     "test:watch": "NODE_OPTIONS=\"--experimental-vm-modules\" jest --watch",
+    "test:weekly": "npm run test:compatibility",
     "test:with-env": "bash scripts/start-test-env.sh && npm run test:typescript",
     "typecheck": "tsc --noEmit",
     "verify-claude": "node scripts/verify-claude-integration.js"
