fix: resolve secret scanning workflow failures
- Remove invalid 'config-path' parameter from gitleaks-action v2
- Use GITLEAKS_CONFIG environment variable instead for custom configuration
- Add stopwords to gitleaks.toml to ignore legitimate test values and documentation
- Fix false positives for GPG key documentation and security code examples

This resolves the failing secret scanning workflow by properly configuring
the gitleaks action according to v2 API requirements.

--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -40,12 +40,10 @@ jobs:
 
       - name: 🔍 GitLeaks Secret Detection
         uses: gitleaks/gitleaks-action@v2
-        with:
-          # Use custom config to exclude test files and documentation
-          config-path: .gitleaks.toml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }} # Only required for Organizations
+          GITLEAKS_CONFIG: .gitleaks.toml
 
   credential-scanning:
     name: 🔑 Credential Pattern Analysis
