fix: improve gitleaks regex patterns based on review feedback
- Remove backticks from GPG key regex pattern to match actual format
- Remove redundant specific GPG key pattern (already covered by stopwords)
- Clean up regex patterns for better maintainability

Addresses GitHub Copilot review comments in PR #46

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -32,8 +32,7 @@ regexes = [
     '''curl -u username:''',
     '''const encryptionKey = "test1234567890"''',
     '''WORDPRESS_APP_PASSWORD=xxxx\s+xxxx\s+xxxx\s+xxxx\s+xxxx\s+xxxx''',
-    '''GPG key: `[A-F0-9]{40}`''',
-    '''F41410131B6F78543A3F215943569F605BBEA4DC'''
+    '''GPG key: [A-F0-9]{40}'''
 ]
 
 # Stop words that should not trigger secret detection
