fix: resolve workflow YAML syntax errors
- Revert security-monitoring.yml to stable version without conditional logic
- Fix multi-line commit message in update-docs.yml causing YAML parsing errors
- Simplify commit message format to single line

Resolves GitHub Actions workflow validation errors preventing builds.

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -118,14 +118,7 @@ jobs:
         TIMESTAMP=$(cat docs/api/summary.json | jq -r '.lastUpdated')
         
         git add docs/api/
-        git commit -m "docs: auto-update API documentation
-
-📚 Automated documentation update
-🔧 Tools documented: $TOOL_COUNT
-📅 Generated: $TIMESTAMP
-🤖 Updated by GitHub Actions
-
-[skip ci]"
+        git commit -m "docs: auto-update API documentation - Tools: $TOOL_COUNT - Generated: $TIMESTAMP [skip ci]"
 
     - name: 🚀 Push Documentation Changes
       if: steps.changes.outputs.changed == 'true' && github.event_name == 'push'
