feat: add comprehensive CONTRIBUTING.md and PerformanceAnalytics tests
- Create detailed contributing guidelines with testing, coverage, and development standards
- Implement 35 comprehensive tests for PerformanceAnalytics.ts achieving ≥50% coverage
- Update Jest configuration to include performance tests
- Establish professional development workflow documentation
- Fix ESLint and markdown linting issues

Closes #65, Closes #62

--- a/jest.typescript.config.json
+++ b/jest.typescript.config.json
@@ -20,7 +20,8 @@
     "**/server/**/*.test.js",
     "**/tools/**/*.test.js",
     "**/cache/**/*.test.js",
-    "**/client/**/*.test.js"
+    "**/client/**/*.test.js",
+    "**/performance/**/*.test.js"
   ],
   "testPathIgnorePatterns": [
     "/node_modules/",
