fix: Jest coverage configuration to collect from dist folder
- Changed collectCoverageFrom to target dist/**/*.js instead of src/**/*.ts
- Updated both jest.config.cjs and jest.typescript.config.json
- Fixed test:coverage:ci script to use correct config
- Enabled coverage collection by default in jest.typescript.config.json

This fixes the issue where tests import from dist/ but coverage was looking for src/ files

--- a/jest.typescript.config.json
+++ b/jest.typescript.config.json
@@ -31,13 +31,13 @@
     "tests/server/ToolRegistry.test.js",
     "tests/managers/authentication.test.js"
   ],
-  "collectCoverage": false,
+  "collectCoverage": true,
   "collectCoverageFrom": [
-    "src/**/*.ts",
-    "!src/**/*.d.ts",
-    "!src/**/*.test.ts",
-    "!src/types/**",
-    "!src/**/index.ts"
+    "dist/**/*.js",
+    "!dist/**/*.d.ts",
+    "!dist/**/*.test.js",
+    "!dist/types/**",
+    "!dist/**/index.js"
   ],
   "coverageReporters": [
     "text-summary",
@@ -73,23 +73,5 @@
   ],
   "globals": {
     "__EXECUTION_CONTEXT__": "jest"
-  },
-  "transform": {
-    "^.+\\.ts$": [
-      "babel-jest",
-      {
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "targets": {
-                "node": "current"
-              }
-            }
-          ],
-          "@babel/preset-typescript"
-        ]
-      }
-    ]
   }
 }
