--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "bundler",
     "lib": ["ES2022"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -26,7 +26,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "exactOptionalPropertyTypes": true,
-    "types": ["node", "jest"]
+    "types": ["node", "vitest/globals"]
   },
   "include": [
     "src/**/*",
@@ -39,7 +39,9 @@
     "dist",
     "coverage",
     "**/*.test.js",
-    "**/*.spec.js"
+    "**/*.spec.js",
+    "src/**/__tests__/**/*",
+    "src/**/*.test.ts"
   ],
   "ts-node": {
     "esm": true,
