fix: address PR review feedback from Sourcery AI
- Remove leftover 'jest' global from ESLint configuration
- Pin codecov GitHub Action to specific commit SHA for security
- Remove Jest backup configuration files (.backup files)
- Revert tsconfig.json rootDir to './src' to prevent unintended compilation
- Consolidate redundant Vitest scripts in package.json
- Update tsconfig includes to only compile src directory

These changes address all blocking issues and improve codebase cleanliness
after the Jest to Vitest migration.

--- a/.github/workflows/vitest-ci.yml
+++ b/.github/workflows/vitest-ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: npm run test:vitest:coverage
 
       - name: 📈 Upload Coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v4.5.0
         with:
           file: ./coverage/lcov.info
           flags: vitest
